# internal/http/routes/routes.go
@@ -9,7 +9,8 @@ import (
 
 func SetupRoutes(router *gin.Engine, storage storage.Storage) {
 	router.GET("/", home.Home())
-	router.POST("/auth/register", handleuser.CreateUser(storage))
+	router.POST("/auth/register/business", handleuser.CreateUser(storage))
+	router.POST("/auth/register/collector", handleuser.CreateUser(storage))
 	router.POST("/auth/login", handleuser.Login(storage))
 	router.StaticFile("/docs/openapi.yaml", "./docs/openapi.yaml")
 }
